dev/tests/cases/neg/22_u128_negative_literal.tv
df main() -> void {
    set u: u128 = -5;
}
